--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
   ],
   "require": {
     "php": "^8.3",
-    "lalaz/cache": "^1.0.0-rc.2"
+    "lalaz/cache": "^1.0.0-rc.1"
   },
+  "minimum-stability": "stable",
+  "prefer-stable": true,
   "autoload": {
     "psr-4": {
       "Lalaz\\Scheduler\\": "src/"
@@ -30,7 +32,6 @@
       ]
     }
   },
-  "minimum-stability": "stable",
   "require-dev": {
     "phpunit/phpunit": "^11.0"
   }
