--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
   ],
   "require": {
     "php": "^8.3",
+    "lalaz/framework": "^1.0.0-rc.1",
     "lalaz/cache": "^1.0.0-rc.1"
   },
-  "minimum-stability": "stable",
   "prefer-stable": true,
   "autoload": {
     "psr-4": {
@@ -32,6 +32,7 @@
       ]
     }
   },
+  "minimum-stability": "stable",
   "require-dev": {
     "phpunit/phpunit": "^11.0"
   }
