--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "authors": [
     {
       "name": "Gregory Serrao",
-      "email": "hello@lalaz.dev"
+      "email": "hi@lalaz.dev"
     }
   ],
   "require": {
